# kanjidic2-sqlite-builder

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build-database.yml
scripts/: ci_sanity_checks.py  dev_run.sh  generate_lookups.py  generate_manifest.py  generate_mcq.py  generate_schema_docs.py
src/k2sqlite/: builder.py  cli.py
tests/: test_builder.py
tests/fixtures/: sample_kanjidic2.xml
