[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "k2sqlite"
version = "0.1.0"
description = "KANJIDIC2 → SQLite (streaming)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "black"
]

[project.scripts]
k2sqlite = "k2sqlite.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
